# mini-stock-manager-cli

./: Cargo.toml  README.md
simple-stocks/: Cargo.toml  README.md
