[package]
name = "mini-stock-manager-cli"
version = "0.0.0"
authors = ["Ivan Fraixedes <ivan@fraixed.es>"]
description = "Command line application to expose the functionality of the simple-stock library to control simple operations in the stock markets and for analyzing the gains and the losses"
readem = "README.md"
keywords = ["stocks", "stock-market"]
license = "MIT"
license-file = "LICENSE"
maintenance = { status = "actively-developed" }

[dependencies]
simple-stocks = { path: "simple-stocks" }

[workspace]
